@@ -117,6 +117,64 @@ body:not(.logged-in).content-restricted  {
 	}
 }
 
+// Simple Checkout
+.lsx-hp-simple-checkout {
+	.header-wrap {
+		#masthead {
+			.primary-navbar {
+				display: none !important;
+			}
+		}
+	}
+	.wrap.container {
+		.archive-header-wrapper,
+		.lsx-hp-archive-description {
+			display: none;
+		}
+		#primary {
+			padding-top: 8.4rem;
+			margin-bottom: 0;
+			#main {
+				.lsx-wc-checkout-steps {
+					display: none;
+				}
+				.entry-content {
+					.lsx-title {
+						text-align: left;
+						&:after {
+							width: 100%;
+							margin-top: 1rem;
+							background-color: $blue;
+						}
+					}
+				}
+				.woocommerce {
+					.woocommerce-notices-wrapper {
+						display: none;
+					}
+					#order_review {
+						margin-bottom: 8.4rem;
+					}
+				}
+			}
+			.checkout-cta-bottom {
+				display: flex;
+				flex-direction: column;
+				background: white;
+				.img-payments {
+					filter: grayscale(100%);
+					margin-top: 3rem;
+					margin-bottom: 3rem;
+				}
+			}
+		}
+		+ footer#colophon {
+			margin-top: 0;
+		}
+	}
+	
+}
+
 // Login page
 .page.login, .page.content-restricted,
 .recipe-template-default,
