@@ -3,6 +3,10 @@
 
 ## [Unreleased] - Minor version 1.3.1
 
+### Added
+- New checkout page with simplified design.
+- Adding new `lsx-hp-simple-checkout` body class if its the checkout page.
+
 ### Fixed
 - Adding in Fix to translate breadcrumbs if endpoints where translated.
 
